--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,9 @@ npm-debug.log
 # Since we are building assets from assets/,
 # we ignore priv/static. You may want to comment
 # this depending on your deployment strategy.
-/priv/static/
+/priv/static/assets
+/priv/static/robots.txt
+/priv/static/favicon.ico
 
 /uploads
 
